# Smart_Farming_ESP32

./: NodeRED_Flow.json  README.md
Smart_Farming_ESP_IDF/: CMakeLists.txt  sdkconfig  sdkconfig.old
Smart_Farming_ESP_IDF/main/: ADS111x.c  ADS111x.h  CMakeLists.txt  DHT22.c  DHT22.h  My_MQTT_task.c  My_MQTT_task.h  app_main.c  error_handler.c  error_handler.h  network_connection.c  network_connection.h  sensor_interface_task.c  sensor_interface_task.h  soil_moisture.c  soil_moisture.h
