idf_component_register(SRCS "error_handler.c" "sensor_interface_task.c" 
                            "app_main.c" 
                            "DHT22.c" 
                            "network_connection.c" 
                            "My_MQTT_task.c"
                            "ADS111x.c"
                            "soil_moisture.c"
                            "error_handler.c"
                       INCLUDE_DIRS ".")
